[workspace]
members = [
    "crates/dash_middle",
    "crates/dash_lexer",
    "crates/dash_parser",
    "crates/dash_compiler",
    "crates/dash_optimizer",
    "crates/dash_vm",
    "crates/dash_core",
    "cli",
    "testrunner",
    "crates/dash_wasm",
    "crates/dash_wasm_engine",
    "crates/dash_regex",
    "crates/dash_proc_macro",
    "crates/dash_rt",
    "crates/dash_dlloader",
    "crates/dash_jit",
    "crates/dash_decompiler",
    "crates/dash_rt_modules",
    "crates/dash_rt_http",
    "crates/dash_rt_fs",
    "crates/dash_rt_fetch",
    "crates/dash_rt_script_modules",
]

[profile.release]
lto = "fat"
codegen-units = 1

[profile.dev]
debug = true
