[workspace]
members = [
    "crates/dash_middle",
    "crates/dash_lexer",
    "crates/dash_parser",
    "crates/dash_compiler",
    "crates/dash_optimizer",
    "crates/dash_vm",
    "cli",
    "testrunner",
    "crates/dash_regex",
    "crates/dash_proc_macro",
    "crates/dash_rt",
    "crates/dash_dlloader",
    "crates/dash_decompiler",
    "crates/dash_rt_modules",
    "crates/dash_rt_http",
    "crates/dash_rt_fs",
    "crates/dash_rt_fetch",
    "crates/dash_rt_script_modules",
    "crates/dash_rt_timers",
    "crates/dash_log",
    "crates/dash_rt_net",
    "crates/dash_typed_cfg",
    "crates/dash_node_impl",
    "lints",
    "lints/tests/ui",
    # "basically dead" crates (need substantial effort to get them up and running again, fell behind with too many internal changes):
    # (commented out so the project can be built in the root dir)
    #
    # "crates/dash_wasm",
]
resolver = "2"

[profile.release]
lto = "fat"
codegen-units = 1
debug = true

[profile.release.package.testrunner]
debug-assertions = true

[profile.dev]
debug = true
