[package]
name = "dash-cli"
version = "0.3.0"
edition = "2018"


[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0", features = ["std"], default-features = false }
rustyline = "9.1.2"
tokio = { version = "1", features = ["full"] }
dash_rt = { path = "../crates/dash_rt", features = ["dlopen"] }
dash_vm = { path = "../crates/dash_vm", features = ["eval"] }
dash_optimizer = { path = "../crates/dash_optimizer" }
tracing-subscriber = "0.3.15"
tracing = "0.1.36"
