[package]
name = "dash-cli"
version = "0.3.0"
edition = "2018"


[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0", features = ["std"], default-features = false }
rustyline = "9.1.2"
tokio = { version = "1", features = ["full"] }
dash_rt = { path = "../crates/dash_rt", features = ["dlopen"] }
dash_lexer = { path = "../crates/dash_lexer" }
dash_parser = { path = "../crates/dash_parser" }
dash_compiler = { path = "../crates/dash_compiler" }
dash_vm = { path = "../crates/dash_vm", features = ["eval"] }
dash_optimizer = { path = "../crates/dash_optimizer" }
dash_decompiler = { path = "../crates/dash_decompiler" }
dash_rt_http = { path = "../crates/dash_rt_http" }
dash_rt_fs = { path = "../crates/dash_rt_fs" }
dash_rt_fetch = { path = "../crates/dash_rt_fetch" }
tracing-subscriber = "0.3.15"
tracing = "0.1.36"
