[package]
name = "dash-cli"
version = "0.1.0"
edition = "2018"


[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0", features = ["std"], default-features = false }
rustyline = "9.1.2"
tokio = { version = "1", features = ["full"] }
dash-core = { path = "../dash-core", features = ["s1-type-annotations"] }
dash-rt = { path = "../dash-rt" }
