[package]
name = "dash-core"
version = "0.2.0"
authors = ["y21"]
edition = "2018"
license = "MIT"

[features]
decompile = []
s1-type-annotations = []

[dependencies]
dash-proc-macro = { path = "../dash-proc-macro" }
derive_more = { version = "0.99.17", features = ["display"] }
bitflags = "1.3.2"
strum = "0.24.0"
strum_macros = "0.24.0"
