[package]
name = "testrunner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.14.1"
dash = { path = "../dash-core" }
structopt = "0.3"
tokio = { version = "1.7.0", features = ["full"] }
futures = "0.3"
