[package]
name = "testrunner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["std"], default-features = false }
anyhow = "1.0"
dash_core = { path = "../crates/dash_core" }
tokio = { version = "1.24.0", features = ["full"] }
futures-util = "0.3.21"
dash_vm = { path = "../crates/dash_vm", features = ["eval"] }
dash_optimizer = { path = "../crates/dash_optimizer" }
