[package]
name = "testrunner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["std"], default-features = false }
anyhow = "1.0"
dash_vm = { path = "../crates/dash_vm", features = [] }
dash_optimizer = { path = "../crates/dash_optimizer" }
serde_yaml = "0.9.17"
once_cell = "1.17.1"
rayon = "1.6.1"
serde = { version = "1.0.152", features = ["derive"] }
