[package]
name = "dash-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
from_string = ["dash-parser", "dash_lexer"]

[dependencies]
dash_middle = { path = "../dash-middle" }
strum = "0.24.0"
strum_macros = "0.24.0"
dash-parser = { path = "../dash-parser", optional = true }
dash_lexer = { path = "../dash-lexer", optional = true }
