[package]
name = "dash-rt"
version = "0.2.0"
edition = "2018"
license = "MIT"

[dependencies]
dash-core = { path = "../dash-core/" }
rand = { version = "0.8.4" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.18", features = ["server", "tcp", "http1"] }
dash-vm = { path = "../dash-vm" }
dash-optimizer = { path = "../dash-optimizer" }
dash_middle = { path = "../dash-middle" }
dash-compiler = { path = "../dash-compiler", features = ["from_string"] }
