[package]
name = "wasm"
version = "0.3.0"
authors = ["y21"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.63"
dash-vm = { path = "../dash-vm" }
dash-optimizer = { path = "../dash-optimizer" }
dash-compiler = { path = "../dash-compiler", features = [
    "from_string",
    "decompile",
] }
dash-parser = { path = "../dash-parser", features = ["from_string"] }
dash_middle = { path = "../dash-middle" }
js-sys = "0.3.57"
