[package]
name = "dash_core"
version = "0.3.0"
authors = ["y21"]
edition = "2018"
license = "MIT"

[features]
decompile = []
type-annotations = []

[dependencies]
dash_proc_macro = { path = "../dash_proc_macro" }
derive_more = { version = "0.99.17", features = ["display"] }
bitflags = "1.3.2"
strum = "0.24.0"
strum_macros = "0.24.0"
