[package]
name = "dash_dlloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dash_vm = { path = "../dash_vm" }
dash_middle = { path = "../dash_middle" }
dash_rt = { path = "../dash_rt" }
libloading = "0.7"
