[package]
name = "dash_llvm_jit_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "140.0.2"
indexmap = "1.9.0"
cstr = "0.2.10"
dash_middle = { path = "../dash_middle" }
dash_log = { path = "../dash_log" }
thiserror = "1.0.38"
bitvec = "1.0.1"
