[package]
name = "dash_middle"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
format = ["serde", "bincode"]

[dependencies]
derive_more = { version = "0.99.17", features = ["display"] }
either = "1.6.1"
strum = "0.24.0"
strum_macros = "0.24.0"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
bincode = { version = "1.3", optional = true }
dash_regex = { path = "../dash_regex", features = ["format"] }
smallvec = { version = "1.10.0", features = ["const_generics"] }
