[package]
name = "dash_middle"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
format = ["serde", "bincode"]

[dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
either = "1.6.1"
strum = "0.27.0"
strum_macros = "0.27.0"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
bincode = { version = "2.0", features = ["serde"], optional = true }
dash_regex = { path = "../dash_regex", features = ["format"] }
smallvec = { version = "1.10.0", features = ["const_generics"] }
ahash = "0.8.3"
phf = { version = "0.11.2", features = ["macros"] }
hashbrown = "0.15.0"
rustc-hash = "2.1.0"
memchr = "2.5.0"
owo-colors = "4.2.0"
dash_proc_macro = { path = "../dash_proc_macro" }
thin-vec = "0.2.13"
