[package]
name = "dash_node_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
dash_middle = { path = "../dash_middle" }
dash_vm = { path = "../dash_vm" }
dash_parser = { path = "../dash_parser", features = ["from_string"] }
dash_rt = { path = "../dash_rt" }
dash_optimizer = { path = "../dash_optimizer" }
anyhow = "1.0"
serde_json = "1.0.103"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.24.0", features = ["full"] }
dash_proc_macro = { path = "../dash_proc_macro" }
rustc-hash = "1.1.0"
dash_rt_fs = { path = "../dash_rt_fs" }
dash_rt_fetch = { path = "../dash_rt_fetch" }
dash_rt_timers = { path = "../dash_rt_timers" }
dash_log = { path = "../dash_log" }
