[package]
name = "dash_parser"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
from_string = ["dash_lexer"]
parse_type_annotations = []

[dependencies]
dash_middle = { path = "../dash_middle" }
dash_lexer = { path = "../dash_lexer", optional = true }
dash_regex = { path = "../dash_regex" }
