[package]
name = "dash_proc_macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["parsing", "extra-traits", "full"] }
quote = "1.0"
proc-macro-crate = "3.3.0"
proc-macro2 = "1.0.50"
