[package]
name = "dash_regex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
format = ["serde", "bitflags/serde"]

[dependencies]
thiserror = "1.0.37"
serde = { version = "1.0", features = ["derive", "rc"], optional = true }
smallvec = { version = "1.9.0", features = ["const_generics"] }
bitflags = { version = "2.4.1", features = ["serde"] }
