[package]
name = "dash_rt"
version = "0.3.0"
edition = "2018"
license = "MIT"

[features]
dlopen = ["dash_dlloader"]

[dependencies]
dash_core = { path = "../dash_core" }
rand = { version = "0.8.4" }
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.18", features = ["server", "tcp", "http1"] }
dash_vm = { path = "../dash_vm", features = ["eval"] }
dash_optimizer = { path = "../dash_optimizer" }
dash_middle = { path = "../dash_middle" }
dash_compiler = { path = "../dash_compiler", features = ["from_string"] }
dash_dlloader = { path = "../dash_dlloader", optional = true }
tracing = "0.1.36"
