[package]
name = "dash_rt"
version = "0.3.0"
edition = "2018"
license = "MIT"

[features]
random = ["rand"]

[dependencies]
dash_core = { path = "../dash_core" }
rand = { version = "0.8.4", optional = true }
tokio = { version = "1.24.25", features = ["full"] }
dash_vm = { path = "../dash_vm", features = [] }
dash_optimizer = { path = "../dash_optimizer" }
dash_middle = { path = "../dash_middle" }
dash_compiler = { path = "../dash_compiler", features = ["from_string"] }
tracing = "0.1.36"
