[package]
name = "dash_rt"
version = "0.3.0"
edition = "2018"
license = "MIT"

[features]
random = ["rand"]

[dependencies]
rand = { version = "0.9.0", optional = true }
tokio = { version = "1.24.25", features = ["full"] }
dash_vm = { path = "../dash_vm", features = [] }
dash_optimizer = { path = "../dash_optimizer" }
dash_proc_macro = { path = "../dash_proc_macro" }
dash_middle = { path = "../dash_middle" }
dash_compiler = { path = "../dash_compiler", features = ["from_string"] }
tracing = "0.1.36"
rustc-hash = "2.1.0"
nohash = "0.2.0"
