[package]
name = "dash_rt_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dash_rt = { path = "../dash_rt" }
dash_vm = { path = "../dash_vm" }
dash_middle = { path = "../dash_middle" }
tokio = { version = "1", features = ["full"] }
