[package]
name = "dash_rt_timers"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dash_rt = { path = "../dash_rt" }
dash_vm = { path = "../dash_vm", features = [] }
dash_middle = { path = "../dash_middle" }
indexmap = "2.9.0"
tokio = { version = "1.24.0", features = [] }
