[package]
name = "dash_vm"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
jit = ["dash_llvm_jit_backend", "dash_typed_cfg"]
stress_gc = []                                    # allows stress testing the GC

[dependencies]
dash_middle = { path = "../dash_middle" }
dash_proc_macro = { path = "../dash_proc_macro" }
dash_lexer = { path = "../dash_lexer" }
dash_parser = { path = "../dash_parser" }
dash_compiler = { path = "../dash_compiler", features = ["from_string"] }
dash_optimizer = { path = "../dash_optimizer" }
dash_regex = { path = "../dash_regex" }
dash_log = { path = "../dash_log" }
dash_llvm_jit_backend = { path = "../dash_llvm_jit_backend", optional = true }
dash_typed_cfg = { path = "../dash_typed_cfg", optional = true }
bitflags = "1.3.2"
smallvec = { version = "1.9.0", features = ["const_generics"] }
ahash = "0.8.3"
rustc-hash = "1.1.0"
hashbrown = "0.14.0"
if_chain = "1.0.2"

[dev-dependencies]
criterion = "0.4.0"
# for tinycolor2 benchmark
ureq = "2.9.6"

[[bench]]
name = "full"
harness = false
