[package]
name = "testrunner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0", features = ["std"], default-features = false }
anyhow = "1.0"
dash-core = { path = "../dash-core" }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.21"
dash-vm = { path = "../dash-vm" }
dash-optimizer = { path = "../dash-optimizer" }
